--- a/basic/package.json
+++ b/basic/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve -o",
+        "start": "ng serve -o --port 4202",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -13,10 +13,13 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~7.2.0",
+        "@angular/cdk": "^7.3.2",
         "@angular/common": "~7.2.0",
         "@angular/compiler": "~7.2.0",
         "@angular/core": "~7.2.0",
+        "@angular/flex-layout": "^7.0.0-beta.23",
         "@angular/forms": "~7.2.0",
+        "@angular/material": "^7.3.2",
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
